--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 @import "settings/all";
 @import "settings/_reset.css";
+@import "settings/mixins";
 
 * {
   margin: 0;
@@ -13,53 +14,87 @@
 }
 
 header {
+
   width: 100%;
-  height: 70px;
+  height: 4em;
   background: $background-color 0 0 no-repeat padding-box;
   box-shadow: 0 3px 6px $header-shadow;
   position: sticky;
   top: 0;
   left: 0;
   z-index: 3;
+
+  .top {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+  }
+
+  .left-text {
+    color: $third-text-color;
+    font-family: 'Raleway', sans-serif;
+    font-size: 32px;
+    margin-left: 1em;
+    @include phone {
+      margin-top: 0.5em;
+    }
+
+  }
+
+  .menu {
+    @include desctop {
+      display: flex;
+      color: $second-text-color;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: bold;
+      text-transform: uppercase;
+      font-size: 11px;
+      justify-content: center;
+      align-items: center;
+      padding: 28px 47.5px 22px;
+      border-bottom: solid 4px transparent;
+    }
+    @include phone {
+      display: none;
+
+    }
+  }
+
+  .menuelements {
+    display: flex;
+
+  }
+  .menu-btn {
+    display: none;
+
+    &:checked ~ .menu {
+      display: flex;
+      flex-direction: column;
+    }
+
+  }
 }
 
-.top {
-  display: flex;
-  height: 70px;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-
-
+.icons {
+  cursor: pointer;
+  background-color: $bnt-text-color;
+  color: $bnt1-background-color;
+  padding: 0.5em 0.75em;
+  border-radius: 0.5em;
+  position: relative;
+  left: 7em;
+  margin-top: 0.5em;
+  @include desctop {
+    display: none;
+  }
 }
 
-.menuelements {
-  display: flex;
 
-
-}
-
-.left-text {
-  color: $third-text-color;
-  font-family: 'Raleway', sans-serif;
-  font-size: 32px;
-}
-
-.menu {
-  display: flex;
-  color: $second-text-color;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 11px;
-  justify-content: center;
-  align-items: center;
-  padding: 28px 47.5px 22px;
-  border-bottom: solid 4px transparent;
-}
 
 .menu:hover {
-  color:$text-color;
+  color: $text-color;
   border-color: $hover-border-color;
 }
 
@@ -67,105 +102,121 @@ header {
 
 
 .main {
+  width: auto;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.mainitems{
+  @include phone{
+    padding: 4em;
+  }
+  .h1main {
+    font-size: 49px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    margin: 20px;
+  }
 
+  .pmain {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    color: $text-color;
+    text-align: center;
+
+  }
+
+  .bnt1 {
+    display: flex;
+    width: 440px;
+    height: 67px;
+    border-radius: 40px;
+    background: $bnt1-background-color 0 0 no-repeat padding-box;
+    color: $bnt-text-color;
+    text-decoration: none;
+    text-align: center;
+    margin: 38px;
+    font-family: 'Open Sans', sans-serif;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 5px 10px 14px $shadow;
+
+  }
+}
 
 .background {
-  width: 1735px;
+  width: 100%;
   height: 100vh;
   background-position: bottom;
   background-repeat: no-repeat;
   background-image: url("../assets/Background.png");
-  margin-bottom: 100px;
+  margin-bottom: 6em;
+  @include phone{
+
+
+  }
 }
 
-.h1main {
-  font-size: 49px;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  margin: 20px;
-}
 
-.pmain {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  color: $text-color;
-  text-align: center;
-}
-
-.bnt1 {
-  display: flex;
-  width: 440px;
-  height: 67px;
-  border-radius: 40px;
-  background:$bnt1-background-color 0 0 no-repeat padding-box;
-  color: $bnt-text-color;
-  text-decoration: none;
-  text-align: center;
-  margin: 38px;
-  font-family: 'Open Sans', sans-serif;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 5px 10px 14px $shadow;
-
-}
 
 
 /*Stats*/
 .stats {
-  padding-bottom: 121px;
+  padding-bottom: 5em;
 
 }
 
 .red {
-  width: 62.71px;
-  height: 62.71px;
+  width: 4em;
+  height: 4em;
   border-radius: 50%;
   background-color: $element-color-1;
 }
 
 .blue {
-  width: 62.71px;
-  height: 62.71px;
+  width: 4em;
+  height: 4em;
   border-radius: 50%;
   background-color: $element-color-2;
 }
 
 .green {
-  width: 62.71px;
-  height: 62.71px;
+  width: 4em;
+  height: 4em;
   border-radius: 50%;
   background-color: $element-color-3;
 }
 
 .h1stats {
   color: $text-color;
-  font-size: 36px;
+  font-size: 2em;
   font-family: 'Raleway', sans-serif;
   text-align: center;
-  margin-bottom: 101px;
+  margin-bottom: 1em;
 
 }
 
 .h2stats {
   color: $text-color;
-  font-size: 20px;
+  font-size: 1.5em;
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-weight: bolder;
-
+  @include phone{
+    margin: 0.5em;
+  }
 }
 
 .pstats {
   font-family: 'Raleway', sans-serif;
   color: $second-text-color;
-  font-size: 17px;
+  font-size: 1em;
   text-align: center;
+  @include phone{
+    margin: 0.5em;
+  }
 }
 
 
@@ -175,6 +226,11 @@ header {
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
+  @include phone{
+    display: flex;
+    flex-direction: column;
+    margin: 0.5em;
+  }
 
 }
 
@@ -182,7 +238,11 @@ header {
 
   display: flex;
   flex-direction: column;
-
+  justify-content: center;
+  align-items: center;
+  @include phone{
+    margin: 0.5em;
+  }
 }
 
 .png1 {
@@ -216,55 +276,49 @@ header {
   background-color: $benefits-background-color;
   align-items: center;
   justify-content: space-between;
-  padding-top: 105px;
+  padding-top: 5em;
 
 }
 
 .box {
+
+  font-family: 'Raleway', sans-serif;
   display: flex;
   background: $background-color;
   border: 1px solid $box-border-color;
   border-radius: 5px;
   align-items: center;
   flex-wrap: wrap;
-  height: 370px;
-  width: 1124px;
-  margin-bottom: 37px;
+  height: 25em;
+  width: 70em;
+  margin-bottom: 2em;
   flex-direction: row-reverse;
   justify-content: space-between;
+  @include phone{
+    height: 40em;
+    width: 33em;
+  }
 
-}
+  }
 
 
-.h2box {
-  font-size: 36px;
-  color: $text-color;
-  font-family: 'Raleway', sans-serif;
-  text-align: left;
-  margin: 30px;
-}
 
-.pbox {
-  font-size: 16px;
-  color: $text-color;
-  font-family: 'Open Sans', sans-serif;
-  text-align: left;
-  margin-left: 30px;
-  margin-bottom: 50px;
 
-}
 
 .line {
   position: relative;
   left: 30px;
   height: 4px;
   width: 327px;
+  @include phone{
+    display:none ;
+  }
 }
-
 
 
 .line1 {
   background-color: $element-color-1;
+
 }
 
 .line2 {
@@ -272,59 +326,115 @@ header {
 }
 
 .line3 {
-  background-color:$element-color-3;
+  background-color: $element-color-3;
 }
 
 
-.box1text {
-  display: flex;
-  width: 416px;
-  height: auto;
-  flex-direction: column;
-  margin-right: 159px;
-  margin-left: 20px;
-  justify-content: center;
-  align-items: flex-start;
-
-}
 
 
 .box1 {
-  height: 370px;
+  height: 3em;
   display: flex;
   justify-content: space-between;
 
+  @include phone {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
 
+  .box1text {
+    display: flex;
+    width: 20em;
+    height: auto;
+    flex-direction: column;
+    margin-right: 159px;
+    margin-left: 20px;
+    justify-content: center;
+    align-items: flex-start;
+    @include phone{
+      width: 25em;
+      margin: 0;
+    }
+
+  }
+
+  .rightside {
+
+    margin-left: 13em;
+    width: auto;
+    height: auto;
+    @include phone{
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .macbook {
+      position: relative;
+      top: -5em;
+      right: 7em;
+
+      width: 24em;
+      height: auto;
+      z-index: 2;
+      @include phone{
+
+        position: relative;
+        top: 5em;
+        right:20%;
+      }
+
+    }
+
+    .element1 {
+      width: 13em;
+      height: 13em;
+      background-color: $element-color-1;
+      transform: rotate(45deg);
+      border-radius: 40px;
+      position: relative;
+      left: 20%;
+      bottom: 20em;
+      @include phone {
+        position: relative;
+        bottom: 10em;
+        left: 10%;
+      }
+
+
+    }
+  }
+}
+.h2box {
+  font-size: 3em;
+  color: $text-color;
+  font-family: 'Raleway', sans-serif;
+  text-align: left;
+  margin: 0.7em;
+  @include phone{
+    display: flex;
+    justify-content: start;
+    margin: 0;
+    margin-bottom: 2em;
+  }
 }
 
-
-.macbook {
-  position: relative;
-  top: 113px;
-  right: 117px;
-  width: 386px;
-  height: auto;
-  z-index: 2;
-
+.pbox {
+  font-size: 1em;
+  color: $text-color;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+  margin-left: 2em;
+  margin-bottom: 3em;
+  @include phone {
+    margin: 0;
+    padding-bottom: 4em;
+  }
 }
 
-.element1 {
-  width: 180px;
-  height: 180px;
-  background-color: $element-color-1;
-  transform: rotate(45deg);
-  border-radius: 40px;
-  position: relative;
-  left: 25%;
-  bottom: 40%;
-
-
-}
-
-.rightside {
-
-  margin-left: 169px;
-}
 
 
 /* second */
@@ -349,6 +459,8 @@ header {
   align-items: center;
 
 
+
+
 }
 
 
@@ -367,7 +479,7 @@ header {
   bottom: 288px;
   width: 320px;
   height: 320px;
-  background-color :$element-color-2;
+  background-color: $element-color-2;
   border-radius: 50%;
   left: 70px;
 
@@ -505,12 +617,12 @@ header {
 
 
 .pricing_box-professional .pricing_price {
-  color:$element-color-2;
+  color: $element-color-2;
 }
 
 
 .pricing_box-premium .pricing_price {
-  color:$element-color-3;
+  color: $element-color-3;
 }
 
 .pricing_limited {
@@ -544,7 +656,7 @@ header {
 }
 
 .pricing_box-basic .btn3 {
-  background-color:$element-color-1;
+  background-color: $element-color-1;
 }
 
 .pricing_box-professional .btn3 {
@@ -700,7 +812,7 @@ header {
   width: 226px;
   height: 57px;
   border: none;
-  color:$bnt-text-color;
+  color: $bnt-text-color;
   font-family: 'Open Sans', sans-serif;
   margin-bottom: 30px;
 }
